--- a/views/models.ejs
+++ b/views/models.ejs
@@ -26,7 +26,7 @@
                         <% } %>
                
                 <% } else { %>
-                    <h1>No tasks Found!</h1>
+                    <h1>No models Found!</h1>
                     <% } %>
         </div>
         
